<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/books"
        android:icon="@drawable/icon_home"
        android:title="@string/label_home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/icon_search"
        android:title="@string/label_search" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/label_profile" />
</menu>